# dnsmasq-ctrl

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  dev.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: main.ts  style.scss
sample_config/etc/: dnsmasq.conf
src/: dnsmasq.rs  line_parser.rs  main.rs  responses.rs
