[package]
name = "dnsmasq-ctrl"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.3.2"
tokio = { version = "1", features = ["full"] }
regex = "1"
serde = "*"
serde_json = "*"
serde_derive = "*"
chrono = "0.4"
rusqlite = { version = "0.28.0", features = ["bundled", "chrono"] }
